--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
 <ul>
     <li>luz</li>
+    <img src="https://images-americanas.b2w.io/produtos/4843586759/imagens/quadro-decorativo-desenho-lampada-arte-tecnologia/4843586759_1_large.jpg" alt="">
     <li>telefone</li>
+    <img src="" alt="">
     <li>bicicleta</li>
+    <img src="" alt="">
 </ul>
 
 </div>
