--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <li>luz</li>
     <img src="https://images-americanas.b2w.io/produtos/4843586759/imagens/quadro-decorativo-desenho-lampada-arte-tecnologia/4843586759_1_large.jpg" alt="">
     <li>telefone</li>
-    <img src="" alt="">
+    <img src="https://png.pngtree.com/element_our/20190528/ourmid/pngtree-luxury-antique-telephone-for-household-appliances-image_1160066.jpg" alt="">
     <li>bicicleta</li>
-    <img src="" alt="">
+    <img src="https://img1.gratispng.com/20180626/vor/kisspng-penny-farthing-bicycle-wheels-bicycle-wheels-cycli-5b31ce67f36263.8852722615299907599969.jpg" alt="">
 </ul>
 
 </div>
